--- a/youtube-clone.html
+++ b/youtube-clone.html
@@ -7,6 +7,34 @@
     <title>YouTube Clone!</title>
 </head>
 <body>
-    
+    <div class="video-grid">
+        <div class="video-card">
+            <div class="thumbnail-container">
+                <a class="video-link" href="">
+                    <img class="thumbnail" src="">
+                </a>
+                <div class="video-time"></div>
+            </div>
+            <div class="video-info">
+                <div class="channel-picture-container">
+                    <a class="channel-link" href="">
+                        <img class="channel-picture" src="">
+                    </a>
+                </div>
+                <div class="text-info">
+                    <div class="video-title">
+                        <a class="video-link" href="">
+
+                        </a>
+                    </div>
+                    <div class="video-author">
+                        <a class="channel-link" href="">
+
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
