--- a/youtube-clone.html
+++ b/youtube-clone.html
@@ -7,34 +7,42 @@
     <title>YouTube Clone!</title>
 </head>
 <body>
-    <div class="video-grid">
+    <main class="video-grid">
         <div class="video-card">
             <div class="thumbnail-container">
-                <a class="video-link" href="">
-                    <img class="thumbnail" src="">
+                <a class="video-link" href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+                    <img class="thumbnail" src="/thumbnails/thumbnail-1.webp">
                 </a>
-                <div class="video-time"></div>
+                <div class="video-time">14:20</div>
             </div>
             <div class="video-info">
                 <div class="channel-picture-container">
-                    <a class="channel-link" href="">
-                        <img class="channel-picture" src="">
+                    <a class="channel-link" href="https://www.youtube.com/c/mkbhd">
+                        <img class="channel-picture" src="/channels/channel-1.jpeg">
                     </a>
                 </div>
                 <div class="text-info">
-                    <div class="video-title">
-                        <a class="video-link" href="">
-
+                    <div class="video-title-container">
+                        <a class="video-link" href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+                            Talking Tech and AI with Google CEO Sundar Pichai!
                         </a>
                     </div>
-                    <div class="video-author">
-                        <a class="channel-link" href="">
-
+                    <div class="video-author-container">
+                        <a class="channel-link" href="https://www.youtube.com/c/mkbhd">
+                            Marques Brownlee
                         </a>
+                        <div class="channel-tooltip">
+                            Marques Brownlee
+                        </div>
+                    </div>
+                    <div class="video-stats-container">
+                        <div class="video-stats">
+                            3.4M views &middot; 6 months ago
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </main>
 </body>
 </html>
