--- a/youtube-clone.html
+++ b/youtube-clone.html
@@ -9,9 +9,46 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/general.css">
     <link rel="stylesheet" href="/styles/video.css">
+    <link rel="stylesheet" href="/styles/header.css">
     <title>YouTube Clone!</title>
 </head>
 <body>
+    <header class="header">
+        <div class="header-left">
+            <img class="hamburger-icon" src="/icons/hamburger-menu.svg">
+            <img class="youtube-logo" src="/icons/youtube-logo.svg">
+        </div>
+        <div class="header-middle">
+            <input class="search-bar" type="text" placeholder="Search">
+            <button class="search-button">
+                <img class="search-icon" src="/icons/search.svg">
+                <div class="tooltip">Search</div>
+            </button>
+            <button class="voice-search-button">
+                <img class="voice-search-icon" src="/icons/voice-search-icon.svg">
+                <div class="tooltip">Search with your voice</div>
+            </button>
+        </div>
+        <div class="header-right">
+            <div class="create-icon-container">
+                <img class="create-icon" src="/icons/upload.svg">
+                <div class="tooltip">Create</div>
+            </div>
+            <div class="youtube-apps-icon-container">
+                <img class="youtube-apps-icon" src="/icons/youtube-apps.svg">
+                <div class="tooltip">YouTube apps</div>
+            </div>
+            <div class="notifications-icon-container">
+                <img class="notifications-icon" src="/icons/notifications.svg">
+                <div class="tooltip">Notifications</div>
+                <div class="notification-count">3</div>
+            </div>
+            <div class="my-channel-picture-container">
+                <img class="my-channel-picture" src="/channels/my-channel.jpeg">
+            </div>
+        </div>
+    </header>
+
     <main class="video-grid">
 
         <div class="video-card">
