--- a/youtube-clone.html
+++ b/youtube-clone.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/styles/general.css">
     <link rel="stylesheet" href="/styles/video.css">
     <link rel="stylesheet" href="/styles/header.css">
+    <link rel="stylesheet" href="/styles/sidebar.css">
     <title>YouTube Clone!</title>
 </head>
 <body>
@@ -48,6 +49,33 @@
             </div>
         </div>
     </header>
+
+    <nav class="sidebar">
+        <div class="icon-container">
+            <img class="icon" src="/icons/home.svg">
+            <div class="text">Home</div>
+        </div>
+        <div class="icon-container">
+            <img class="icon" src="/icons/explore.svg">
+            <div class="text">Explore</div>
+        </div>
+        <div class="icon-container">
+            <img class="icon" src="/icons/subscriptions.svg">
+            <div class="text">Subscriptions</div>
+        </div>
+        <div class="icon-container">
+            <img class="icon" src="/icons/originals.svg">
+            <div class="text">Originals</div>
+        </div>
+        <div class="icon-container">
+            <img class="icon" src="/icons/youtube-music.svg">
+            <div class="text">Youtube Music</div>
+        </div>
+        <div class="icon-container">
+            <img class="icon" src="/icons/library.svg">
+            <div class="text">Library</div>
+        </div>
+    </nav>
 
     <main class="video-grid">
 
